--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ author: 'Sam Albanie'
 
 paginate:	5
 
-url: / #"http://myblog.***.***" # the base hostname & protocol for your site
+url: "http://oxfordcodekats.com" #"http://myblog.***.***" # the base hostname & protocol for your site
 baseurl: ""
 
 # social icons and sharing options
